@@ -16,3 +16,4 @@ intltool-*
 ltmain.sh
 stamp-h1
 update-mime-database
+shared-mime-info.pc
