@@ -1,0 +1,12 @@
+prefix=@prefix@
+exec_prefix=${prefix}
+libdir=${exec_prefix}/lib
+includedir=${prefix}/include
+
+
+Name: shared-mime-info
+Description: Freedesktop common MIME database
+Version: @VERSION@
+Requires:
+Libs:
+Cflags:
