@@ -1,3 +1,7 @@
+Wed Jan 21 14:28:16 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* shared-mime-info.pc.in: add a package-config file
+
 Tue Jan 20 10:22:44 2004  Jonathan Blandford  <jrb@gnome.org>
 
 	* configure.in: Patch from Alex Larsson <alexl@redhat.com> to
